--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "intersection-observer": "^0.12.2",
     "react": "^18.3.1",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^6.9.0",
