--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "intersection-observer": "^0.12.2",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-content-loader": "^7.0.0",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "sonner": "^1.4.41",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
