--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.27.0",
     "sonner": "^1.4.41",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
@@ -53,7 +54,7 @@
   },
   "devDependencies": {
     "install": "^0.13.0",
-    "npm": "^10.8.0",
+    "npm": "^10.8.1",
     "tailwindcss": "^3.4.3"
   }
 }
