--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
+"homepage": "/Accomodation",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
