--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^3.6.0",
+    "lucide-react": "^0.503.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-content-loader": "^7.0.0",
@@ -25,7 +26,7 @@
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
-"homepage": "/Accomodation",
+  "homepage": "/Accomodation",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
